tests/basics/tstring_coverage.py.exp
=== Basic functionality ===
Template
Strings: ('Hello ', '')
Value: World

=== Constructor tests ===
Empty: ('',)
Keyword error: Template.__new__ only accepts *args arguments
Invalid type: Template.__new__ *args need to be of type 'str' or 'Interpolation', got int
Single string: ('single',)
Multi concat: ('firstsecondthird',)
Mixed: ('start', 'middle', 'end')
Tuple validation: interpolations tuple must contain only Interpolation objects, got int

=== Format specifiers ===
Conversions: r='test', s=test, a='test'
Conv+format: '   3.14159'
Interpolated format: '      3.14'
Escaped {}: SKIPPED (hangs)
Escaped }}: SKIPPED (hangs)
Complex format: SKIPPED (hangs)
Undefined var in format: NameError
Debug: x=x=42

=== Size limits ===
Large template: 100003 chars

=== Values property ===
Small values: (1, 2, 3, 4)
Large values: 10 items
Exception path: skipped (requires internals)

=== Binary operations ===
T+T: Template
T+str: can only concatenate Template (not "str") to Template
str+T: unsupported types for __add__: 'str', 'Template'
int+T: TypeError
-: unsupported
*: unsupported
/: unsupported
%: unsupported
**: unsupported
&: unsupported
|: unsupported
^: unsupported
<<: unsupported
>>: unsupported

=== Iterator ===
Iterator: ['str', 'Interpolation', 'str', 'Interpolation', 'str']
Empty strings: [1, 2]
__iter__ attr: False

=== __template__ builtin ===
Invalid format: invalid interpolation format
__template__: Template

=== Attributes ===
strings: ('test', '')
interpolations: 1
values: (42,)
__str__ bound: test42

=== String prefixes ===
Raw: 'Path: C:\Users\'
tr: 'Path: C:\Users\'
bt prefix: SyntaxError
ft prefix: SyntaxError
t+regular: SyntaxError

=== Parser edge cases ===
Expr limit: template expression too long
Empty expr: None
Complex: 1
Invalid syntax: SyntaxError

=== Special cases ===
Unicode: Party 🎉!
Implicit: 'Part1 Part2'
repr: Template(strings=('t...
isinstance: True
Interpolation: read-only
__match_args__: ('value', 'expression', 'conversion', 'format_spec')

Full coverage tests completed!